Fix T74298: Incorrect cursor position in Python console